# Sales_Agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GOOGLE_DRIVE_SETUP.md  LICENSE  README.md  analyze.py  main.py  pyproject.toml  requirements.txt  setup.py
docs/: INSTALLATION.md  PROJECT_STRUCTURE.md
src/sales_agent/: __init__.py  main.py
src/sales_agent/agents/: analysis_agent.py  data_retrieval_agent.py  orchestrator.py
src/sales_agent/data_sources/: __init__.py  google_drive.py  local_storage.py
src/sales_agent/functions/: __init__.py  data_manipulation.py  data_ops.py  statistics.py
src/sales_agent/utils/: __init__.py  code_executor.py  config.py  conversation_state.py
src/sales_agent/visualizations/: charts.py
tests/: __init__.py  test_data_ops.py  test_statistics.py
